--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --experimental-modules src/index.mjs"
+    "start": "node --experimental-modules index.mjs"
   },
   "keywords": [],
   "author": "",
