--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.4.0",
+    "node-fetch": "^3.3.1",
     "webcola": "^3.4.0"
   },
   "devDependencies": {
