--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "project-glovo-headless-graph-simulation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.mjs",
-  "scripts": {
-    "start": "node index.mjs"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "d3": "^7.8.4",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "mongodb": "^4.4.0",
-    "node-fetch": "^3.3.1",
-    "webcola": "^3.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.1.5"
-  }
+    "name": "project-glovo-headless-graph-simulation",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.mjs",
+    "scripts": {
+        "start": "node index.mjs"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "d3": "^7.8.4",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "lodash": "^4.17.21",
+        "mongodb": "^4.4.0",
+        "node-fetch": "^3.3.1",
+        "webcola": "^3.4.0",
+        "@types/node": "^20.1.5"
+    }
 }
